traefik/external-routes.yaml
# With help from https://crt.the-mori.com/2021-09-17-kubernetes-traefik-forward-traffic-external-ip

# ####### SABNZBD #######

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-external-route
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sabnzbd1.ucdialplans.com`)
    kind: Rule
    services:
    - name: sabnzbd-forward
      kind: Service
      port: 8085
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik


---
kind: Service
apiVersion: v1
metadata:
  name: sabnzbd-forward
  namespace: traefik
spec:
  type: ExternalName
  ports:
  - name: sabnzbd-forward
    port: 8085
    targetPort: 8085
  externalName: 192.168.1.3
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik


# ####### WLED Fireplace Left #######

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wled-fp-left-external-route
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: k3s.ucdialplans.com
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`wled-fp-left.ucdialplans.com`)
    kind: Rule
    services:
    - name: wled-fp-left-forward
      kind: Service
      port: 80
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik


---
kind: Service
apiVersion: v1
metadata:
  name: wled-fp-left-forward
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: k3s.ucdialplans.com
    kubernetes.io/ingress.class: traefik
spec:
  type: ExternalName
  ports:
  - name: wled-fp-left-forward
    port: 80
    targetPort: 80
  externalName: 192.168.1.55
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik



# ####### WLED Fireplace Right #######

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wled-fp-right-external-route
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`wled-fp-right.ucdialplans.com`)
    kind: Rule
    services:
    - name: wled-fp-right-forward
      kind: Service
      port: 80
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik


---
kind: Service
apiVersion: v1
metadata:
  name: wled-fp-right-forward
  namespace: traefik
spec:
  type: ExternalName
  ports:
  - name: wled-fp-right-forward
    port: 80
    targetPort: 80
  externalName: 192.168.1.56
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik



# ####### Firepit Speakers #######

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: firepit-speakers-external-route
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`firepit-speakers.ucdialplans.com`)
    kind: Rule
    services:
    - name: firepit-speakers-forward
      kind: Service
      port: 80
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik


---
kind: Service
apiVersion: v1
metadata:
  name: firepit-speakers-forward
  namespace: traefik
spec:
  type: ExternalName
  ports:
  - name: firepit-speakers-forward
    port: 80
    targetPort: 80
  externalName: 192.168.1.23
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik


# ---
# kind: IngressRoute
# apiVersion: traefik.containo.us/v1alpha1
# metadata:
#   name: firepit-speakers
#   namespace: traefik
# spec:
#   entryPoints: 
#     - websecure
#   routes:
#   - match: Host(`firepit-speakers.ucdialplans.com`) 
#     kind: Rule
#     services:
#     - name: firepit-speakers-service
#       port: 80
#     middlewares:
#     - name: traefik-security
#       namespace: traefik
#   tls:
#     secretName: traefik-wildcard-cert
#     options:
#       name: tls-options-default
#       namespace: traefik


# ---
# kind: "Service"
# apiVersion: "v1"
# metadata:
#   name: "firepit-speakers-service"
#   namespace: traefik
# spec:
#   ports:
#   - name: "firepit-speakers"
#     protocol: "TCP"
#     port: 80
#     targetPort: 80 

# ---
# kind: "Endpoints"
# apiVersion: "v1"
# metadata:
#   name: "firepit-speakers-service"
#   namespace: traefik 
# subsets: 
# - addresses:
#   - ip: "192.168.1.23" 
#   ports:
#   - port: 80
#     name: "firepit-speakers"
